# DjangoShopProject

./: .env_sample  .gitignore  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug_alter_post_views_count.py  0003_alter_post_created_at.py
blog/service/infrastructure/: posts_service.py
blog/templates/blog/: base.html  create-post.html  index.html  paginator.html  search-result.html  single-post.html  update-post.html
catalog/: admin.py  filters.py  forms.py  generic.py  mixins.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  load_all.sh  products.json
catalog/management/commands/: fill_up_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_contact.py  0004_alter_product_category.py  0005_version_version_one_active_version_for_product.py
catalog/templates/: base.html  contacts.html  create_product.html  edit_product.html  home.html  product.html
catalog/templates/catalog/: base.html  contacts.html  create_product.html  edit_product.html  home.html  product.html
catalog/templatetags/: filters.py  tags.py
email_service/: apps.py  send.py  settings.py  signals.py
secrets/: .secrets_example  app_key
shop/: settings.py  urls.py
utils/: secrets.py
